# SchrodingerLite

./: .gitignore  LICENSE  QUICKSTART.md  README.md  environment.yml  install.sh  pyproject.toml
docs/: AI_DRUG_DISCOVERY.md
examples/: aidiscover_quickrun.sh  egfr_aidiscover.txt  hiv_protease_demo.yml  ligands.smi
lib/: __init__.py  ai_design.py  ai_filter.py  ai_pipeline.py  cheminfo.py  cli.py  confsearch.py  docking.py  ligprep.py  md.py  protprep.py  qm.py  qsar.py  refine.py  utils.py  viewer.py
projects/: maestro_view.html
projects/egfr_demo/aidiscovery/: SUBMISSION_GUIDE.md  cover_letter.docx  cover_letter.md  final_ranked.csv  final_ranked_unique.csv  md_stability.py  mmgbsa.csv  mmgbsa_rescore.py  preprint.docx  preprint.md  selectivity.csv  selectivity_check.py  stability.csv  summary.txt  view_top_hits.py  ~$eprint.docx
projects/egfr_demo/aidiscovery/_md_stability/EGFR-TM-014/: rmsd.csv
projects/egfr_demo/aidiscovery/_md_stability/EGFRm-002/: rmsd.csv
projects/egfr_demo/aidiscovery/_md_stability/EGFRm-009/: rmsd.csv
projects/egfr_demo/aidiscovery/_selectivity/: docking_results.csv
projects/egfr_demo/aidiscovery/_wt_receptor/: receptor.pdbqt
projects/egfr_demo/aidiscovery/rounds/round_01/: 01_proposed.jsonl  02_filtered.jsonl  ligands.smi
projects/egfr_demo/aidiscovery/rounds/round_02/: 01_proposed.jsonl  02_filtered.jsonl  ligands.smi
projects/egfr_demo/aidiscovery/rounds/round_03/: 01_proposed.jsonl  02_filtered.jsonl  ligands.smi
projects/egfr_demo/receptor/: receptor.pdbqt
(+35 files in other folders)
